--- a/css/main.css
+++ b/css/main.css
@@ -35,7 +35,6 @@ button {
 
 .main-header {
     padding: 15px;
-    margin-bottom: 15px;
 }
 
 .main-header .logo {
@@ -50,7 +49,6 @@ button {
     background-color: #ebf0f1;
     border: none;
     padding: 10px;
-    width: 17vw;
     border-radius: 5px;
     margin-right: 10px;
     transition: .3s;
@@ -65,7 +63,7 @@ button {
     font-weight: bold;
     border-radius: 5px;
     transition: .3s;
-    width: 7vw;
+    width: 120px;
     border: none;
 }
 
@@ -114,9 +112,55 @@ button {
 
 #map {
     height: 350px;
-    /* The height is 400 pixels */
     width: 100%;
-    /* The width is the width of the web page */
+    margin-bottom: 20px;
+}
+
+.single-location {
+    background-color: #f5f6fa;
+    width: 18%;
+    height: 200px;
+    border-radius: 10px;
+    padding: 10px;
+    transition: .5s;
+    margin-bottom: 15px;
+    margin-right: 15px;
+}
+
+.single-location:hover {
+    background-color: #dcdde1;
+}
+
+.single-location p {
+    margin-top: 3px;
+    font-size: .9rem;
+    text-align: center;
+}
+
+.location-btns {
+    border: none;
+    color: white;
+    padding: 5px 0;
+    transition: .3s;
+    font-weight: bold;
+    width: 85%;
+}
+
+.delete-location {
+    margin-bottom: 10px;
+    background-color: #e84118;
+}
+
+.delete-location:hover {
+    background-color: #c23616;
+}
+
+.update-location {
+    background-color: #4cd137;
+}
+
+.update-location:hover {
+    background-color: #44bd32;
 }
 
 /* HELPERS */
